Sat Jan 29 00:03:32 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkcellrendererpopup.c (gxk_cell_renderer_idle_popup): 
	skip dialog popup if the editing entry has been removed meanwhile.
	works around GtkTreeView button press handling bugs as described in:
	http://mail.gnome.org/archives/gtk-devel-list/2005-January/msg00144.html

Wed Jan 26 01:22:04 2005  Tim Janik  <timj@gtk.org>

	* configure.in: up, up version to 0.6.5rc, binary 0, interface 0.

Tue Jan 25 00:38:48 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstusermessage.c (dialog_show_above_modals): override active
	event grabs of modal windows when showing new message dialogs.

	* beast-gtk/gxk/gxkutils.c (gxk_toplevel_delete): deliver delete events 
	asyncronously to the window despite active event grabs.

Tue Jan 25 00:00:11 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstpianoroll.c: 
	turned ticks_to_pixels() and pixels_to_ticks() into conversions
	with double precision. 
	bst_piano_roll_hsetup(): fixate start position when hzooming.
	piano_roll_adjustment_changed(): compare floats within suitable 
	epsilon to avoid endless adjustment-changed reemissions.

Sun Jan 23 22:04:43 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/scripts/Makefile.am:
	* tests/scripts/noteplaytest.scm: New script that allows testing how
	an instrument (currently: only wave instruments such as gus patches
	supported) sounds when played on a given midi note.

Fri Jan 21 00:33:42 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/radgets-beast.xml: added action factories to event
	and piano roll popup menus to create menu items for selection actions.

	* beast-gtk/bstpartdialog.[hc]: change cut/copy/clear sensitivity according
	to selection changes. publish piano roll and event roll selection actions.
	
	* beast-gtk/bsteventrollctrl.[hc]: implemented selection actions.

	* beast-gtk/bsteventroll.c: fixed unnecessary redraws. keep max_ticks
	field up to date. update controllers upon part changes. 
