@@ -654,17 +654,22 @@
       <beast-menubar />
     </vbox>
     <vbox id="toolbar-area" area="north" />
-    <hbox area="north" spacing="5" >
-      <hbox id="control-area" />
-      <hbox id="control-area-file-label" pack:pack-type="last" />
-      <hbox id="control-area-file-entry" pack:pack-type="last" expand="1" />
+    <hbox area="north" >
+      <hbox id="export-area" padding="5" expand="1" >
+	<hbox id="export-area-file-label" pack:pack-type="last" />
+	<hbox id="export-area-file-entry" pack:pack-type="last" expand="1" />
+      </hbox>
     </hbox>
-    <vbox expand="1" >
-      <alignment xalign="0.5" xscale="0" >
+    <vbox expand="1" border-width="5" >
+      <hbox>
+	<handle-box pack-type="end"
+	  snap-edge="right" >
+	  <hbox id="control-area" />
+	</handle-box>
 	<menu-button can-focus="1" mode="combo-mode" assortment="project-pages" />
-      </alignment>
-      <deck id="main-notebook" expand="1" assortment="project-pages" border-width="5" />
+      </hbox>
+      <deck id="main-notebook" expand="1" assortment="project-pages" />
     </vbox>
   </xdef:application-box>
-
+  
 </gxk-radget-definitions>
