@@ -1,3 +1,13 @@
+Sat Feb  5 15:34:50 2005  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.c: permit creation of a single song only through
+	the gui. 
+
+	* beast-gtk/dialogs/radgets-standard.xml: define handle-box container.
+
+	* beast-gtk/dialogs/radgets-beast.xml:
+	* beast-gtk/bstapp.c: rearranged widgets in the main app shell.
+
 Sat Jan 29 00:03:32 2005  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkcellrendererpopup.c (gxk_cell_renderer_idle_popup): 
